--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,7 @@
 ### Example user template
 
 # IntelliJ project files
-.idea
 *.iml
-out
-gen
-snake-swagger/target/
-target/
+/.idea
+/*/target
+/target
