--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,10 @@
 
     <groupId>cn.yt4j</groupId>
     <artifactId>snake-starter</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <modules>
         <module>snake-swagger</module>
+        <module>snake-job</module>
     </modules>
     <packaging>pom</packaging>
     <url>https://github.com/Gyv12345/snake-starter</url>
