--- a/pom.xml
+++ b/pom.xml
@@ -11,23 +11,24 @@
         <module>snake-swagger</module>
         <module>snake-job</module>
         <module>snake-qiniu</module>
+        <module>snake-common</module>
     </modules>
     <packaging>pom</packaging>
     <url>https://github.com/Gyv12345/snake-starter</url>
-    <description>一个启动器项目和我设想的平台是配套的</description>
+    <description>一个启动器项目，简化相关引入操作</description>
 
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spring-boot.version>2.2.2.RELEASE</spring-boot.version>
+        <spring-boot.version>2.2.4.RELEASE</spring-boot.version>
         <xxl.job.version>2.1.2</xxl.job.version>
         <swagger.version>2.9.2</swagger.version>
         <swagger-ui.version>1.9.3</swagger-ui.version>
         <jjwt.version>0.9.9</jjwt.version>
-        <snake.version>1.0-SNAPSHOT</snake.version>
-        <hutool.version>5.1.0</hutool.version>
+        <snake.version>1.0.1</snake.version>
+        <hutool.version>5.1.1</hutool.version>
     </properties>
 
     <dependencyManagement>
